--- a/tauri/backend/oauth-proxy/public/oauth-callback.html
+++ b/tauri/backend/oauth-proxy/public/oauth-callback.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gmail Authentication Complete</title>
+    <title>OAuth Authentication Complete</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body>
-    <h1>📧 Gmail Authentication</h1>
+    <h1>🔐 OAuth Authentication</h1>
     <div id="status" class="loading">
         <p>Processing authentication...</p>
     </div>
@@ -51,9 +51,26 @@
         const accessToken = urlParams.get('access_token');
         const refreshToken = urlParams.get('refresh_token');
         const expiryDate = urlParams.get('expiry_date');
+        const service = urlParams.get('service') || 'unknown';
         const error = urlParams.get('error');
 
         const statusDiv = document.getElementById('status');
+
+        // Service-specific configuration
+        const serviceConfig = {
+            gmail: {
+                name: 'Gmail',
+                emoji: '📧',
+                color: '#d93025'
+            },
+            // Add more services here as needed
+        };
+
+        const config = serviceConfig[service] || {
+            name: service.charAt(0).toUpperCase() + service.slice(1),
+            emoji: '🔐',
+            color: '#007bff'
+        };
 
         if (error) {
             statusDiv.className = 'error';
@@ -66,12 +83,12 @@
             statusDiv.className = 'success';
             statusDiv.innerHTML = `
                 <h3>✅ Authentication Successful!</h3>
-                <p>Your Gmail account has been successfully connected.</p>
+                <p>Your ${config.name} account has been successfully connected.</p>
                 <p>Redirecting to desktop application...</p>
             `;
 
             // Redirect to the Tauri app via deep-link
-            const deepLinkUrl = `archestra-ai://oauth-callback?access_token=${accessToken}&refresh_token=${refreshToken}&expiry_date=${expiryDate || ''}`;
+            const deepLinkUrl = `archestra-ai://oauth-callback?service=${service}&access_token=${accessToken}&refresh_token=${refreshToken}&expiry_date=${expiryDate || ''}`;
             
             setTimeout(() => {
                 window.location.href = deepLinkUrl;
