--- a/oauth-proxy/public/oauth-callback.html
+++ b/oauth-proxy/public/oauth-callback.html
@@ -63,6 +63,46 @@
           emoji: '📧',
           color: '#d93025',
         },
+        'google-drive': {
+          name: 'Google Drive',
+          emoji: '📁',
+          color: '#0F9D58',
+        },
+        'google-calendar': {
+          name: 'Google Calendar',
+          emoji: '📅',
+          color: '#4285F4',
+        },
+        'google-docs': {
+          name: 'Google Docs',
+          emoji: '📄',
+          color: '#4285F4',
+        },
+        'google-sheets': {
+          name: 'Google Sheets',
+          emoji: '📊',
+          color: '#0F9D58',
+        },
+        'google-slides': {
+          name: 'Google Slides',
+          emoji: '📱',
+          color: '#F4B400',
+        },
+        'google-forms': {
+          name: 'Google Forms',
+          emoji: '📋',
+          color: '#673AB7',
+        },
+        'google-tasks': {
+          name: 'Google Tasks',
+          emoji: '✅',
+          color: '#4285F4',
+        },
+        'google-chat': {
+          name: 'Google Chat',
+          emoji: '💬',
+          color: '#0F9D58',
+        },
         // Add more services here as needed
       };
 
