Add express server

--- a/desktop_app/index.html
+++ b/desktop_app/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
+    <div id="server-response"></div>
+    <button id="fetch-data">Fetch Data from Server</button>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
